<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="183dp"
        app:srcCompat="@drawable/images_removebg_preview__1_"
        android:contentDescription="@string/pic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="#3F51B5"
        android:gravity="center_horizontal"
        android:text="@string/bmi"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="#3F51B5"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvresult1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="#3F51B5"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvresult2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="#3F51B5"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvresult3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="#3F51B5"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnGoback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:background="#3F51B5"
        android:text="@string/go_back"
        android:textSize="25sp"
        app:backgroundTint="#1A2149" />

</LinearLayout>